# spread_patterns

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
